feat: switch only windows in current monitor

--- a/window-switcher.ini
+++ b/window-switcher.ini
@@ -18,6 +18,10 @@ ignore_minimal = no
 # Settings > System > Multitasking > Virtual Desktops
 only_current_desktop = auto
 
+# Switch to windows only from the current monitor instead of all monitors.
+# Default is no (include all monitors)
+only_current_monitor = no
+
 [switch-apps]
 
 # Whether to enable switching apps
@@ -38,6 +42,10 @@ override_icons =
 # Defaults to match the Alt-Tab behavior of Windows:
 # Settings > System > Multitasking > Virtual Desktops
 only_current_desktop = auto
+
+# Switch to apps only from the current monitor instead of all monitors.
+# Default is no (include all monitors)
+only_current_monitor = no
 
 [log]
 
